* add missing banner on preferences template * set min-height for #banner for non-room screens * update knrooms header to match room screens * summary view remembers size of list pane * fix double iconbar in graphics upload * fix enter message not being in the right div + overflowing * disable :hover rule for input fields

--- a/static/webcit.css
+++ b/static/webcit.css
@@ -464,10 +464,10 @@ a:visited { color: purple; }
 
 #customize a:active, #customize a:link, #customize a:visited { color: black; }
 
-#important_message, .buttons a:hover, .msgbuttons a:hover, input:hover, #button > li:hover, #online_users li a:hover, #navbar ul li a:hover, #ib_logoff:hover {
+#important_message, .buttons a:hover, .msgbuttons a:hover, #button > li:hover, #online_users li a:hover, #navbar ul li a:hover, #ib_logoff:hover {
 	background-color: #AD1C00;
 	color: #FFF;
-}
+} /* input:hover as well?? */
 
 
 
@@ -565,6 +565,7 @@ body, #global {
 	left: 16%;
 	width: 84%;
 	height: 18%; */
+    min-height: 18%;
 }
 
 #navbar {
